# -----------------------------------------------------------------------------
# 步骤 1：指定 CMake 最低版本
# 3.14+ 对 target_link_libraries 等与 modern CMake 写法兼容较好。
# -----------------------------------------------------------------------------
cmake_minimum_required(VERSION 3.14)

# -----------------------------------------------------------------------------
# 步骤 2：定义工程名称与使用的语言
# LANGUAGES CXX 表示本项目只需 C++，不写 C。
# -----------------------------------------------------------------------------
project(epoll_tcp_server LANGUAGES CXX)

# -----------------------------------------------------------------------------
# 步骤 3：C++ 标准
# 代码里用了 string_view 等，建议 C++17。
# -----------------------------------------------------------------------------
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

# -----------------------------------------------------------------------------
# 步骤 4：线程库（std::thread / mutex 等在 GCC 上通常要链 -pthread）
# Threads::Threads 是跨平台的推荐用法。
# -----------------------------------------------------------------------------
find_package(Threads REQUIRED)

# -----------------------------------------------------------------------------
# 步骤 5：生成可执行文件，列出所有 .cpp
# 头文件一般不必写进 add_executable，只要 include 目录配好即可。
# -----------------------------------------------------------------------------
add_executable(epoll_server
    src/main.cpp
    src/TcpServer.cpp
    src/Connection.cpp
    src/thread_pool.cpp
)

# -----------------------------------------------------------------------------
# 步骤 6：头文件搜索路径
# PRIVATE：只有本 target 编译时需要 include/。
# -----------------------------------------------------------------------------
target_include_directories(epoll_server PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/include
)

# -----------------------------------------------------------------------------
# 步骤 7：链接库
# epoll 等属于 Linux 系统调用封装，无需额外库；线程池需要 Threads。
# -----------------------------------------------------------------------------
target_link_libraries(epoll_server PRIVATE Threads::Threads)
